# stompy-ticketing

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: board.md  handoff.md  spawn-team.md  sprint-plan.md  tdd-cycle.md  test-and-ticket.md
stompy_ticketing/: __init__.py  api_routes.py  mcp_tools.py  migrations.py  models.py  plugin.py  schema.py  service.py
tests/: test_api.py  test_batch_operations.py  test_board_pagination.py  test_cluster_c_fixes.py  test_context_links.py  test_mcp_tools.py  test_schema.py  test_service.py  test_sql_injection.py  test_state_machine.py  test_tag_filtering.py  test_ticket_search_regex.py
