[project]
name = "stompy-ticketing"
version = "0.2.1"
description = "Ticketing plugin for Stompy AI Memory"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
