[project]
name = "stompy-ticketing"
version = "0.5.0"
description = "Ticketing plugin for Stompy AI Memory"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "python-toon==0.1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
